--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application x:Class="ChatBot.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="/View/LoginView.xaml">
+﻿<Application
+    StartupUri="/View/LoginView.xaml"
+    x:Class="ChatBot.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-
+        <FontFamily x:Key="Montserrat">pack://application:,,,/Fonts/Montserrat-VariableFont_wght.ttf #Montserrat</FontFamily>
     </Application.Resources>
 </Application>
